Converted to english

--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -8,7 +8,7 @@
       >
         {{
           currentCategory === "" && currentSearch === ""
-            ? "Populares"
+            ? "popular"
             : currentSearch !== ""
             ? currentSearch
             : currentCategory
