--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,44 +13,13 @@
     </a>
 
     <aside class="flex gap-4">
-      <div class="group">
-        <a
-          target="_blank"
-          rel="noopener"
-          class="text-grayLight text-sm lg:group-hover:text-primary transition flex flex-col justify-center items-center"
-          href="https://as-work.vercel.app/"
-        >
-          <img
-            src="/assets/svg/Portfolio.svg"
-            alt="Portafolio"
-            class="size-6 object-cover cursor-pointer lg:group-hover:scale-125 transition"
-          />
-          Portafolio
-        </a>
-      </div>
 
       <div class="group">
         <a
           target="_blank"
           rel="noopener"
           class="text-grayLight text-sm lg:group-hover:text-primary transition flex flex-col justify-center items-center"
-          href="https://www.linkedin.com/in/antonio-silva-developer/"
-        >
-          <img
-            src="/assets/svg/Linkedin.svg"
-            alt="Linkedin"
-            class="size-6 object-cover cursor-pointer lg:group-hover:scale-125 transition"
-          />
-          Linkedin
-        </a>
-      </div>
-
-      <div class="group">
-        <a
-          target="_blank"
-          rel="noopener"
-          class="text-grayLight text-sm lg:group-hover:text-primary transition flex flex-col justify-center items-center"
-          href="https://github.com/Asilvazavala"
+          href="https://github.com/keyurpanchal"
         >
           <img
             src="/assets/svg/Github.svg"
@@ -65,20 +34,20 @@
 
   <article class="flex flex-col gap-2 text-lg">
     <a href="/contact" class="text-secondary lg:hover:brightness-125 transition"
-      >Contacto</a
+      >Contact</a
     >
     <a
-      href="https://github.com/Asilvazavala/Dev-Tools"
+      href="https://github.com/keyurpanchal/blog-replica"
       target="_blank"
       rel="noopener"
       class="text-secondary lg:hover:brightness-125 transition"
     >
-      Contribuir
+      Contribute
     </a>
   </article>
 
   <article class="flex flex-col gap-2">
-    <p class="text-secondary text-lg">Diseño inspirado en:</p>
+    <p class="text-secondary text-lg">Design inspired by:</p>
     <aside class="flex gap-4">
       <a
         class="text-grayLight underline lg:hover:text-primary transition"
