--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
     />
 
     <aside class="gap-4 hidden lg:flex">
-      <app-button btn_name="Agregar tool" />
+      <app-button btn_name="Github" />
     </aside>
 
     <!-- Navbar Mobile -->
@@ -37,7 +37,7 @@
       <ul
         class="absolute top-0 left-0 flex flex-col justify-start items-center h-screen w-screen pt-20 bg-gradient-to-r from-slate-800 to-slate-950"
       >
-        <app-button btn_name="Agregar tool" />
+        <app-button btn_name="Github" />
         <app-sidebar />
       </ul>
       }
