--- a/src/app/search-input/search-input.component.html
+++ b/src/app/search-input/search-input.component.html
@@ -12,7 +12,7 @@
       (input)="handleChange($event, 'search')"
       type="text"
       class="pl-10 text-primary bg-transparent pr-4 py-2 rounded-md border-none outline-grayLight outline outline-1 hover:outline-2 transition"
-      placeholder="Buscar..."
+      placeholder="Look for..."
     />
   </div>
   
